# binance-colo-research

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: binance_url.txt
src/binancecoloresearch/: __init__.py  __main__.py  cli.py  geo.py  network.py  parser.py  reporter.py
src/template_package/: __init__.py
tests/: test_example.py
